fixed deployment issue, but also needed to fix issue where the level was one behind when rendered and implementing css logic to eliminate overscroll on mobile

--- a/src/input.css
+++ b/src/input.css
@@ -38,7 +38,7 @@
       rgb(255, 228, 230),
       rgb(204, 251, 241)
     );
-    @apply min-h-screen h-full relative;
+    @apply min-h-screen h-full relative overscroll-none;
   }
 
   button {
@@ -85,7 +85,7 @@
   /*======================================== card grid ======================================== */
   .card-grid {
     @apply flex flex-wrap px-8 max-[400px]:px-4 gap-x-4 gap-y-8 mx-auto items-center justify-center 
-  pt-[36px] pb-[100px] max-w-[1100px];
+  pt-[36px] pb-[150px] max-w-[1100px];
   }
 
   /*======================================== comment ======================================== */
